modify the img src

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class = "header">
     <!-- header: upload file -->
         <div id="file-upload-section">
-            <label for="fileInput"><img src="assets/Swipe.PNG" width=25%></label>
+            <label for="fileInput"><img src="assets/upload.PNG" width=25%></label>
             <input type="file" id="fileInput" accept=".json">
         </div>
     </div>
